metadata/force-app/main/default/objects/ccrz__E_FeaturedProduct__c/fields/ccrz__Description__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Description__c</fullName>
    <description>Enter in a short, 255 character max, description that will display next to the product image for product spotlight and featured product.</description>
    <inlineHelpText>Enter in a short, 255 character max, description that will display next to the product image for product spotlight and featured product.</inlineHelpText>
    <label>Promotion Description</label>
    <type>TextArea</type>
</CustomField>