metadata/force-app/main/default/objects/ccrz__E_FeaturedProduct__c/fields/ccrz__Enabled__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not this featured product is enabled for the storefront</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>