metadata/force-app/main/default/objects/ccrz__E_FeaturedProduct__c/fields/ccrz__Product__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Product__c</fullName>
    <description>Product that is being featured</description>
    <label>Product Item</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>Featured Products</relationshipLabel>
    <relationshipName>Featured_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>