metadata/force-app/main/default/objects/ccrz__E_FeaturedProduct__c/fields/ccrz__Storefront__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Storefront__c</fullName>
    <description>One or more storefronts that the featured product should be displayed on.</description>
    <label>Storefront</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DefaultStore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>